# simple-photos

./: .gitignore  .gitleaks.toml  AGENTS.md  API_REFERENCE.md  CLAUDE.md  LICENSE  PREMIUM_UX_PLAN.md  README.md  TODO-ai-geo-exif.md  TODO.md  alerts.json  alerts_p1.json  alerts_p2.json  bump-version.ps1  bump-version.sh  concurrent_test.sh  e2e_backup_test.sh  e2e_test.sh  install.ps1  install.sh  my_changes.diff  plan.md  pytest.ini  reset-primary.ps1  reset-primary.sh  reset-server.ps1  reset-server.sh  todo.md
.github/: FUNDING.yml  copilot-instructions.md  sync-main-exclude.txt
android/: TODO.md  gradle.properties  settings.gradle.kts
benchmark_results/: serving_speed_20260411_004423.json  serving_speed_20260411_004830.json  serving_speed_20260411_062558.json  serving_speed_20260411_175350.json  serving_speed_20260413_065914.json  serving_speed_20260416_072952.json
docker-instances/: docker-compose.yml
e2e/: run_all.sh
packaging/: README.md
scripts/: fetch_ai_models.sh  fetch_geo_data.sh  generate_geo_samples.py  seed_geo_albums.py  verify_geo_samples.py
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  audit.toml  build_out.txt  config.example.toml  deny.toml  docker-compose.yml  patch_probe.py  test_parse_gw  test_parse_gw.rs  watchdog.ps1
server/data/db/: simple-photos.db  simple-photos.db-shm  simple-photos.db-wal
server/migrations/: 001_core.sql  001_initial.sql  002_audit_and_lockout.sql  002_data.sql  003_roles.sql  003_social.sql  004_encryption_modes.sql  004_infrastructure.sql  005_data_normalization.sql  005_trash_and_backup.sql  006_backup_diagnostics.sql  006_backup_mode_and_autoscan.sql  006_nullable_encrypted_blob_id.sql  007_remove_conversion.sql  007_secure_gallery_original_tracking.sql  007_shared_albums.sql  008_allow_shared_file_paths.sql  008_client_logs.sql  009_audit_log_forwarding.sql  009_photo_tags.sql  010_favorites_and_crop.sql  010_library_export.sql  011_gallery_encrypted_blob_tracking.sql  011_trash_blob_support.sql  012_gallery_encrypted_thumb_tracking.sql  012_google_photos_metadata.sql  013_camera_model.sql  013_egi_original_photo_hash.sql  014_conversion_pipeline.sql  014_photo_hashes.sql  015_encrypted_thumb_blob_id.sql  015_normalize_timestamp_formats.sql  016_normalize_timestamps.sql  016_photo_subtype.sql  017_ai_recognition.sql  017_edit_copies.sql  018_audio_backup_setting.sql  018_geolocation_albums.sql  019_diagnostics_config.sql  019_extended_exif_metadata.sql  (+11 more)
server/src/: audit.rs  config.rs  conversion.rs  crypto.rs  db.rs  error.rs  http_utils.rs  ingest.rs  main.rs  media.rs  process.rs  ratelimit.rs  routes.rs  sanitize.rs  security.rs  state.rs  tasks.rs
server/src/ai/: clustering.rs  engine.rs  face.rs  handlers.rs  imagenet_labels.rs  mod.rs  models.rs  object.rs  processor.rs  session.rs  tagging.rs
server/src/ai/animal/: mod.rs
server/src/ai/face/: legacy.rs  mod.rs
server/src/auth/: handlers.rs  handlers_2fa.rs  handlers_login.rs  handlers_password.rs  lockout.rs  middleware.rs  mod.rs  models.rs  timing.rs  tokens.rs  totp.rs  validation.rs
server/src/backup/: autoscan.rs  broadcast.rs  diagnostics.rs  discover.rs  discovery.rs  handlers.rs  mod.rs  mode.rs  models.rs  proxy.rs  recovery.rs  recovery_engine.rs  serve.rs  serve_receive.rs  serve_users.rs  sync.rs  sync_blobs.rs  sync_engine.rs  sync_galleries.rs  sync_metadata.rs  sync_transfer.rs  sync_users.rs
server/src/backup/serve/: blobs.rs  deletions.rs  galleries.rs  metadata.rs  mod.rs  read.rs
server/src/blobs/: chunked.rs  download.rs  handlers.rs  mod.rs  models.rs  storage.rs
server/src/client_logs/: handlers.rs  mod.rs  models.rs
server/src/diagnostics/: collect.rs  external.rs  handlers.rs  mod.rs  models.rs
server/src/downloads/: handlers.rs  mod.rs
server/src/editing/: edit_copies.rs  ffmpeg.rs  image_render.rs  mod.rs  models.rs  render_download.rs  save.rs  save_copy.rs
server/src/export/: handlers.rs  mod.rs  worker.rs
server/src/gallery/: access.rs  mod.rs  models.rs  secure.rs  secure_token.rs  shared.rs  sync.rs
server/src/geo/: dataset.rs  geocoder.rs  handlers.rs  mod.rs  precise.rs  processor.rs  scrub.rs
server/src/health/: handlers.rs  mod.rs
server/src/import/: google_photos.rs  handlers.rs  mod.rs  models.rs  takeout.rs
server/src/photos/: burst.rs  cleanup.rs  convert.rs  copies.rs  encryption.rs  galleries.rs  handlers.rs  metadata.rs  metadata_edit.rs  mod.rs  models.rs  motion.rs  render.rs  scan.rs  serve.rs  server_migrate.rs  server_migrate_encrypt.rs  storage_stats.rs  sync.rs  thumbnail.rs  upload.rs  utils.rs  web_preview.rs
server/src/photos/metadata/: media.rs  mod.rs  subtype.rs
server/src/setup/: admin.rs  admin_2fa.rs  discovery.rs  discovery_phases.rs  handlers.rs  import.rs  letsencrypt.rs  local_ca.rs  mod.rs  pair.rs  pair_helpers.rs  port.rs  smb.rs  ssl.rs  storage.rs  wizard_gate.rs
server/src/sharing/: handlers.rs  mod.rs  models.rs
server/src/tags/: handlers.rs  mod.rs  models.rs
server/src/transcode/: ffmpeg_gpu.rs  gpu_probe.rs  handlers.rs  mod.rs
server/src/trash/: handlers.rs  mod.rs  models.rs  operations.rs  purge.rs
server/tests/smb_data/vault/Files/Ente/Takeout/Google Photos/Album1/: photo1.jpg.supplemental-metadata.json
tests/: README.md  conftest.py  geo_fixtures.py  helpers.py  requirements.txt  test_01_auth.py  test_02_photos.py  test_03_blobs.py  test_04_trash.py  test_05_albums_shared.py  test_06_albums_secure.py  test_07_tags_search.py  test_08_edit_copies.py  test_09_sync_engine.py  test_10_backup_restore.py  test_11_multi_user.py  test_12_edge_cases.py  test_13_comprehensive_backup.py  test_14_library_export.py  test_15_secure_gallery_backup.py  test_15_storage_disconnect.py  test_16_backup_recovery_selection.py  test_17_justified_grid_layout.py  test_18_media_conversion.py  test_19_phase_sequencing.py  test_20_photo_date_ordering.py  test_21_multi_user_pipeline.py  test_22_tls_combos.py  test_23_serving_speed.py  test_24_portrait_orientation.py  test_25_regression_export_portrait_secure.py  test_27_portrait_display.py  (+59 more)
(+391 files in other folders)
