[package]
name = "simple-photos-server"
version = "0.6.9"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "fs", "compression-gzip", "compression-br"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "tls-rustls"] }
jsonwebtoken = "10"
bcrypt = "0.15"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
uuid = { version = "1", features = ["v4", "v7"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
hex = "0.4"
base32 = "0.5"
tower = "0.5"
tokio-util = { version = "0.7", features = ["io"] }
dashmap = "6"
subtle = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
percent-encoding = "2"
axum-server = { version = "0.7", features = ["tls-rustls"] }
# ── Let's Encrypt / ACME ───────────────────────────────────────────
# `instant-acme` drives the ACME-v2 RFC-8555 protocol over rustls
# (no OpenSSL).  `rcgen` builds the CSR / keypair we hand to the CA.
# `pem` is used to round-trip the certificate chain returned by ACME
# into the on-disk PEM file the rustls listener loads.
instant-acme = "0.7"
rcgen = { version = "0.13", default-features = false, features = ["crypto", "pem", "ring"] }
pem = "3"
# `rustls` is pulled in transitively by axum-server-tls / instant-acme /
# reqwest, but we depend on it directly to install the `ring` crypto
# provider as the process default at boot — otherwise the multi-provider
# auto-selection panics.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
imagesize = "0.13"
kamadak-exif = "0.5"
aes-gcm = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "ico", "avif", "tiff", "hdr"] }
base64 = "0.22"
num_cpus = "1"
async-stream = "0.3"
arc-swap = "1"
http-body-util = "0.1"
byteorder = "1"
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17"
# Force vendored OpenSSL so ort-sys's ureq build dep doesn't need system headers
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
rustix = { version = "1", features = ["process"] }

# ── GPU acceleration features ───────────────────────────────────────
# `install.sh` / `install.ps1` auto-detect NVIDIA hardware (nvidia-smi
# or libcudart.so) on the build host and pass `--features cuda` when
# present, so operators get GPU acceleration without any opt-in.
# Hosts without a CUDA-capable GPU build the default (CPU-only)
# variant — fully portable, no CUDA runtime required.
#
# Manual override (e.g. cross-compile for a CUDA box from a CPU host):
#     cargo build --release --features cuda
[features]
default = []
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
