[package]
name = "simple-photos-server"
version = "1.0.3"
edition = "2021"
description = "Self-hosted, end-to-end encrypted photo & video library server"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/Wulfic/simple-photos"
repository = "https://github.com/Wulfic/simple-photos"
readme = "../README.md"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "fs", "compression-gzip", "compression-br"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "tls-rustls"] }
jsonwebtoken = "9"
bcrypt = "0.15"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
uuid = { version = "1", features = ["v4", "v7"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
hex = "0.4"
base32 = "0.5"
tower = "0.5"
tokio-util = { version = "0.7", features = ["io"] }
dashmap = "6"
subtle = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
percent-encoding = "2"
axum-server = { version = "0.7", features = ["tls-rustls"] }
# ── Let's Encrypt / ACME ───────────────────────────────────────────
# `instant-acme` drives the ACME-v2 RFC-8555 protocol over rustls
# (no OpenSSL).  `rcgen` builds the CSR / keypair we hand to the CA.
# `pem` is used to round-trip the certificate chain returned by ACME
# into the on-disk PEM file the rustls listener loads.
instant-acme = "0.7"
rcgen = { version = "0.13", default-features = false, features = ["crypto", "pem", "ring"] }
pem = "3"
# `rustls` is pulled in transitively by axum-server-tls / instant-acme /
# reqwest, but we depend on it directly to install the `ring` crypto
# provider as the process default at boot — otherwise the multi-provider
# auto-selection panics.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
# `time` is already a transitive dep of rcgen — declare it directly so the
# self-signed local CA module can name `time::OffsetDateTime` (the type used
# by `rcgen::CertificateParams::not_before` / `not_after`) without inferring
# it through opaque return types.
time = "0.3"
imagesize = "0.13"
kamadak-exif = "0.5"
aes-gcm = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "ico", "avif", "tiff", "hdr"] }
base64 = "0.22"
num_cpus = "1"
async-stream = "0.3"
arc-swap = "1"
http-body-util = "0.1"
byteorder = "1"
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17"
# Force vendored OpenSSL so ort-sys's ureq build dep doesn't need system headers
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
rustix = { version = "1", features = ["process"] }

# ── GPU acceleration features ───────────────────────────────────────
# CUDA execution provider is baked into the default build. The ORT
# CUDA EP loads `libcudart` / `libcublas` lazily at runtime (dlopen),
# so a binary built with `--features cuda` runs unmodified on hosts
# WITHOUT a GPU — `AiEngine::detect_cuda()` returns false and the
# engine falls back to CPU. This means one binary ships everywhere,
# no per-host rebuild dance for releases.
#
# Opt-out (very rare — e.g. minimal embedded targets):
#     cargo build --release --no-default-features
[features]
default = ["cuda"]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]

# ── cargo-deb metadata ──────────────────────────────────────────────────────
# Build a Debian/Ubuntu .deb with:  cargo install cargo-deb && cargo deb --no-build
# (call after `cargo build --release --no-default-features` for a CPU-only,
# distributable package — CUDA is a runtime opt-in handled by the ORT EP).
#
# The package layout:
#   /usr/bin/simple-photos-server                  — release binary
#   /usr/share/simple-photos/web/                  — built React frontend
#   /usr/share/simple-photos/migrations/           — SQLx migrations
#   /etc/simple-photos/config.toml                 — config (conffile, preserved on upgrade)
#   /lib/systemd/system/simple-photos.service      — systemd unit
#   /var/lib/simple-photos/                        — data root (created by postinst)
#
# The postinst script creates the `simple-photos` system user, scaffolds the
# data dirs, and enables the service. Storage root is finalised by the
# first-run setup wizard (web UI on :8080) — the .deb only seeds defaults.
[package.metadata.deb]
name = "simple-photos"
maintainer = "Wulfic <noreply@github.com>"
copyright = "2026, Wulfic"
license-file = ["../LICENSE", "0"]
extended-description = """\
Self-hosted, end-to-end encrypted photo and video library with face/object \
recognition, reverse geocoding, multi-user albums, and a Progressive Web App. \
The first-run setup wizard configures the photo storage location."""
section = "web"
priority = "optional"
depends = "$auto, ca-certificates, ffmpeg, adduser"
recommends = "nvidia-cuda-toolkit"
suggests = "cifs-utils"
assets = [
    ["target/release/simple-photos-server", "usr/bin/", "755"],
    ["migrations/**/*", "usr/share/simple-photos/migrations/", "644"],
    ["../web/dist/**/*", "usr/share/simple-photos/web/", "644"],
    ["../packaging/debian/config.toml", "etc/simple-photos/config.toml", "640"],
    ["../packaging/debian/README.Debian", "usr/share/doc/simple-photos/", "644"],
    ["../packaging/debian/fetch-assets.sh", "usr/share/simple-photos/fetch-assets.sh", "755"],
]
conf-files = ["/etc/simple-photos/config.toml"]
maintainer-scripts = "../packaging/debian/"
systemd-units = { unit-name = "simple-photos", unit-scripts = "../packaging/debian/", enable = true, start = true, restart-after-upgrade = true }

# Build profile tuned for shipping binaries: thin LTO, stripped, single
# codegen unit. Slower link, materially smaller artefact.
[package.metadata.deb.variants.release]
features = []
default-features = false
