[package]
name = "simple-photos-server"
version = "1.3.52"
edition = "2021"
description = "Self-hosted, end-to-end encrypted photo & video library server"
license = "MIT"
homepage = "https://github.com/Wulfic/simple-photos"
repository = "https://github.com/Wulfic/simple-photos"
readme = "../README.md"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "fs", "compression-gzip", "compression-br"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "tls-rustls"] }
# SQLCipher: encrypt the entire database at rest.  sqlx's SQLite driver links
# `libsqlite3-sys`; pinning the exact version sqlx 0.8 resolves to (0.30) and
# enabling `bundled-sqlcipher-vendored-openssl` makes that linked library a
# full SQLCipher build (OpenSSL compiled from source — we already vendor it).
# The database is then unlocked per-connection with `PRAGMA key` in db.rs.
libsqlite3-sys = { version = "0.30", features = ["bundled-sqlcipher-vendored-openssl"] }
jsonwebtoken = "9"
bcrypt = "0.15"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
uuid = { version = "1", features = ["v4", "v7"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
hex = "0.4"
base32 = "0.5"
tower = "0.5"
tokio-util = { version = "0.7", features = ["io"] }
dashmap = "6"
subtle = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
percent-encoding = "2"
axum-server = { version = "0.7", features = ["tls-rustls"] }
# ── Let's Encrypt / ACME ───────────────────────────────────────────
# `instant-acme` drives the ACME-v2 RFC-8555 protocol over rustls
# (no OpenSSL).  `rcgen` builds the CSR / keypair we hand to the CA.
# `pem` is used to round-trip the certificate chain returned by ACME
# into the on-disk PEM file the rustls listener loads.
instant-acme = "0.7"
rcgen = { version = "0.13", default-features = false, features = ["crypto", "pem", "ring"] }
pem = "3"
# `rustls` is pulled in transitively by axum-server-tls / instant-acme /
# reqwest, but we depend on it directly to install the `ring` crypto
# provider as the process default at boot — otherwise the multi-provider
# auto-selection panics.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
# `time` is already a transitive dep of rcgen — declare it directly so the
# self-signed local CA module can name `time::OffsetDateTime` (the type used
# by `rcgen::CertificateParams::not_before` / `not_after`) without inferring
# it through opaque return types.
time = "0.3"
imagesize = "0.13"
kamadak-exif = "0.5"
aes-gcm = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "ico", "avif", "tiff", "hdr"] }
base64 = "0.22"
num_cpus = "1"
async-stream = "0.3"
arc-swap = "1"
http-body-util = "0.1"
byteorder = "1"
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17"
# Force vendored OpenSSL so ort-sys's ureq build dep doesn't need system headers
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
rustix = { version = "1", features = ["process"] }

# ── GPU acceleration features ───────────────────────────────────────
# CUDA execution provider is baked into the default build. The ORT
# CUDA EP loads `libcudart` / `libcublas` lazily at runtime (dlopen),
# so a binary built with `--features cuda` runs unmodified on hosts
# WITHOUT a GPU — `AiEngine::detect_cuda()` returns false and the
# engine falls back to CPU. This means one binary ships everywhere,
# no per-host rebuild dance for releases.
#
# Opt-out (very rare — e.g. minimal embedded targets):
#     cargo build --release --no-default-features
[features]
default = ["cuda"]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]

# ── cargo-deb metadata ──────────────────────────────────────────────────────
# Build a Debian/Ubuntu .deb with:  cargo install cargo-deb && cargo deb --no-build
# (call after `cargo build --release --no-default-features` for a CPU-only,
# distributable package — CUDA is a runtime opt-in handled by the ORT EP).
#
# The package layout:
#   /usr/bin/simple-photos-server                  — release binary
#   /usr/share/simple-photos/web/                  — built React frontend
#   /usr/share/simple-photos/migrations/           — SQLx migrations
#   /etc/simple-photos/config.toml                 — config (conffile, preserved on upgrade)
#   /lib/systemd/system/simple-photos.service      — systemd unit
#   /var/lib/simple-photos/                        — data root (created by postinst)
#
# The postinst script creates the `simple-photos` system user, scaffolds the
# data dirs, and enables the service. Storage root is finalised by the
# first-run setup wizard (web UI on :8080) — the .deb only seeds defaults.
[package.metadata.deb]
name = "simple-photos"
maintainer = "WulfNet Designs <noreply@github.com>"
copyright = "2026, WulfNet Designs"
license-file = ["../LICENSE", "0"]
# Keep this short and factual — it's what `apt show` / GDebi display, and it
# mirrors the AppStream <summary>/<description>. No install steps or runtime
# instructions (those belong in README.Debian / the first-run wizard).
extended-description = """\
Simple Photos is a self-hosted, end-to-end encrypted photo and video library \
you run on your own hardware as a private alternative to cloud photo services. \
It offers on-device AI face and object recognition, offline reverse geocoding, \
multi-user shared and private albums, encrypted backup from the companion \
Android app, and an installable Progressive Web App."""
section = "web"
priority = "optional"
depends = "$auto, ca-certificates, ffmpeg, adduser, curl, unzip"
recommends = "nvidia-cuda-toolkit"
suggests = "cifs-utils"
assets = [
    ["target/release/simple-photos-server", "usr/bin/", "755"],
    # ONNX Runtime CUDA execution-provider shared libs. ort's `copy-dylibs`
    # feature (on by default) drops these next to the binary after a CUDA build
    # (`cargo build --release` with default features). They are dlopen'd lazily
    # at first GPU inference; the systemd unit puts /usr/lib/simple-photos on
    # LD_LIBRARY_PATH so the runtime can find them. The actual CUDA runtime
    # (libcudart/libcublas/libcudnn) comes from nvidia-cuda-toolkit (recommends).
    # NOTE: a CPU-only build (--no-default-features) does NOT produce these —
    # drop these two lines if you build without the cuda feature.
    ["target/release/libonnxruntime_providers_shared.so", "usr/lib/simple-photos/", "644"],
    ["target/release/libonnxruntime_providers_cuda.so", "usr/lib/simple-photos/", "644"],
    ["migrations/**/*", "usr/share/simple-photos/migrations/", "644"],
    ["../web/dist/**/*", "usr/share/simple-photos/web/", "644"],
    ["../packaging/debian/config.toml", "etc/simple-photos/config.toml", "640"],
    ["../packaging/debian/README.Debian", "usr/share/doc/simple-photos/", "644"],
    ["../packaging/debian/fetch-assets.sh", "usr/share/simple-photos/fetch-assets.sh", "755"],
    ["../packaging/debian/simple-photos-setup.service", "lib/systemd/system/simple-photos-setup.service", "644"],
    # Desktop entry + AppStream MetaInfo. The .desktop and .metainfo.xml basenames
    # MUST match the AppStream component id (io.github.wulfic.SimplePhotos) so
    # GNOME Software associates the launcher, icon, publisher, license and
    # description correctly. WITHOUT the metainfo file, GNOME Software shows
    # "unknown" publisher/license and falls back to the verbose package
    # description — that was issue #3.
    ["../packaging/debian/io.github.wulfic.SimplePhotos.desktop", "usr/share/applications/io.github.wulfic.SimplePhotos.desktop", "644"],
    ["../packaging/debian/io.github.wulfic.SimplePhotos.metainfo.xml", "usr/share/metainfo/io.github.wulfic.SimplePhotos.metainfo.xml", "644"],
    ["../packaging/debian/simple-photos-256.png", "usr/share/icons/hicolor/256x256/apps/simple-photos.png", "644"],
    ["../packaging/debian/simple-photos-512.png", "usr/share/icons/hicolor/512x512/apps/simple-photos.png", "644"],
    # Android APK bundled read-only so the in-app "Download APK" button works
    # offline immediately (issue #4). The postinst seeds it into the writable
    # downloads dir; fetch-assets.sh later refreshes it from the GitHub release.
    # CI's deb job stages this file from the android job artifact before
    # `cargo deb`; local `cargo deb` builds must place an APK here too (it is
    # .gitignored — see packaging/debian/.gitignore).
    ["../packaging/debian/simple-photos.apk", "usr/share/simple-photos/simple-photos.apk", "644"],
]
conf-files = ["/etc/simple-photos/config.toml"]
maintainer-scripts = "../packaging/debian/"
systemd-units = { unit-name = "simple-photos", unit-scripts = "../packaging/debian/", enable = true, start = true, restart-after-upgrade = true }

# Build profile tuned for shipping binaries: thin LTO, stripped, single
# codegen unit. Slower link, materially smaller artefact.
[package.metadata.deb.variants.release]
features = []
default-features = false
